--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/lmbaladovidal/chec#readme",
   "dependencies": {
+    "ejs": "^3.0.2",
     "express": "^4.17.3",
     "nodemon": "^2.0.15"
   }
