--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "ejs": "^3.0.2",
     "express": "^4.17.3",
     "method-override": "^3.0.0",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.15"
   }
 }
