--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/lmbaladovidal/chec#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.2.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.0.2",
     "express": "^4.17.3",
