--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.0",
+    "cloudinary": "^1.30.1",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.0.2",
     "express": "^4.17.3",
